fix: update hero picture styles and adjust layout for improved responsiveness and alignment

--- a/src/app/main-component/atf/atf.component.scss
+++ b/src/app/main-component/atf/atf.component.scss
@@ -137,9 +137,9 @@
 .hero-pic {
   position: relative;
   margin-top: -150px;
-  margin-bottom: 30px;
-  max-width: clamp(120px, 20vw, 250px);
-  width: clamp(80px, 18vw, 220px);
+  margin-bottom: 0;
+  max-width: clamp(80px, 15vw, 150px);
+  width: clamp(60px, 12vw, 150px);
   height: auto;
   object-fit: cover;
   margin-left: clamp(1vw, 3vw, 5vw);
@@ -214,14 +214,31 @@
 .hero-pic-mobile{
   display: block;
   transform: rotate(10deg);
-  width: 200px;
+  width: 150px;
   height: auto;
 }
 }
 
 @media (max-width: 767px) {
+
+#atf{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
 .hero{
   align-items: flex-start;
+}
+.max-content{
+  margin:0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 .hero-socials{
   display: none;
@@ -231,12 +248,9 @@ display: none;
 }
 .atf-content{
     position: static;
-    margin-top: -50px;
+    
 }
-.max-content{
-  padding: 0;
-  margin-top: 150px;
-}
+
 .atf-content{
   gap: 20px;
   width: 100%;
